fix for intro H1 on iphone5

--- a/ui/less/styles.less
+++ b/ui/less/styles.less
@@ -316,10 +316,11 @@ header.fullscreen {
   font-weight: 800;
   font-size: 60px;
   line-height: 64px;
-  padding-top: 45px;
+  padding-top: 30px;
   padding-bottom: 7.5px;
   text-shadow: 0px 0px 3px rgba(0,0,0,0.25);
 }
+
 .intro h2 {
   color: #C7E8FF;
   font-family: "adelle", serif;
@@ -595,6 +596,15 @@ Progressively enhance for larger screens
 /* ==========================================================================
 AG's media queries to be merged
 ========================================================================== */
+
+/* Special exception of extra-extra-small devices (e.g. iphone5, less than 380px) */
+@media (max-width: 380px) {
+    .intro h1 {
+    font-size: 50px;
+    line-height: 55px;
+  }
+}
+
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
 /* Small devices (tablets, 768px and up) */
